--- a/app/src/main/res/layout/activity_hador.xml
+++ b/app/src/main/res/layout/activity_hador.xml
@@ -23,4 +23,11 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="100dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="409dp"
+        android:layout_height="581dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnKtTestAction" />
 </androidx.constraintlayout.widget.ConstraintLayout>
